--- a/all.yml
+++ b/all.yml
@@ -10,3 +10,9 @@
   hosts: controllers
   roles:
     - etcd
+
+- name: Kuber-config
+  become: true
+  hosts: controllers
+  roles:
+    - kuber-config
