--- a/roles/initial/tasks/main.yml
+++ b/roles/initial/tasks/main.yml
@@ -4,21 +4,35 @@
     name: "{{ hostname_name }}"
   when: hostname_name is defined
 
+- name: Make dirs
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
+  with_items:
+    - /var/lib/kubernetes
+    - /etc/kubernetes
+  when: "'controllers' in group_names"
+
 - name: Copy etc/hosts
   template:
     src: hosts.j2
     dest: /etc/hosts
 
-- name: Copy tools
+- name: Copy tools TODO NOT_NEEDED
   copy:
     src: "{{ item }}"
     dest: /usr/local/bin/
     owner: root
     mode: 0755
   with_fileglob:
-    - files/cfssl
-    - files/cfssljson
+    - files/kube-apiserver
+    - files/kube-controller-manager
+    - files/kube-scheduler
     - files/kubectl
+  when: "'controllers' in group_names"
 
 - name: Distribute Certificates to workers
   copy:
@@ -34,7 +48,7 @@
     - files/configs/kube-proxy.kubeconfig
   when: "'workers' in group_names"
 
-- name: Distribute Certificates to controllers
+- name: Distribute Certificates to controllers CHANGEME
   copy:
     src: "{{ item }}"
     dest: /root/
@@ -51,4 +65,30 @@
     - files/configs/kube-controller-manager.kubeconfig
     - files/configs/kube-scheduler.kubeconfig
     - files/configs/encryption-config.yaml
+  when: "'no-so-needed-controllers' in group_names"
+
+- name: Copy config files to /etc/kubernetes
+  copy:
+    src: "{{ item }}"
+    dest: /etc/kubernetes
+    owner: root
+    mode: 0644
+  with_fileglob:
+    - files/configs/kube-scheduler.yaml
+
+- name: Copy config file to kubernetes controllers
+  copy:
+    src: "{{ item }}"
+    dest: /var/lib/kubernetes
+    owner: root
+    mode: 0644
+  with_fileglob:
+    - files/certs/ca.pem
+    - files/certs/ca-key.pem
+    - files/certs/kubernetes.pem
+    - files/certs/kubernetes-key.pem
+    - files/certs/service-account.pem
+    - files/certs/service-account-key.pem
+    - files/configs/encryption-config.yaml
+    - files/configs/kube-controller-manager.kubeconfig
   when: "'controllers' in group_names"
