--- a/roles/initial/tasks/main.yml
+++ b/roles/initial/tasks/main.yml
@@ -14,6 +14,7 @@
   with_items:
     - /var/lib/kubernetes
     - /etc/kubernetes
+    - /etc/kubernetes/config
   when: "'controllers' in group_names"
 
 - name: Copy etc/hosts
@@ -21,7 +22,7 @@
     src: hosts.j2
     dest: /etc/hosts
 
-- name: Copy tools TODO NOT_NEEDED
+- name: Copy tools
   copy:
     src: "{{ item }}"
     dest: /usr/local/bin/
@@ -34,7 +35,7 @@
     - files/kubectl
   when: "'controllers' in group_names"
 
-- name: Distribute Certificates to workers
+- name: Distribute certificates to workers
   copy:
     src: "{{ item }}"
     dest: /root/
@@ -48,35 +49,17 @@
     - files/configs/kube-proxy.kubeconfig
   when: "'workers' in group_names"
 
-- name: Distribute Certificates to controllers CHANGEME
+- name: Copy controllers config files to /etc/kubernetes
   copy:
     src: "{{ item }}"
-    dest: /root/
-    owner: root
-    mode: 0644
-  with_fileglob:
-    - files/certs/ca.pem
-    - files/certs/ca-key.pem
-    - files/certs/kubernetes.pem
-    - files/certs/kubernetes-key.pem
-    - files/certs/service-account.pem
-    - files/certs/service-account-key.pem
-    - files/configs/admin.kubeconfig
-    - files/configs/kube-controller-manager.kubeconfig
-    - files/configs/kube-scheduler.kubeconfig
-    - files/configs/encryption-config.yaml
-  when: "'no-so-needed-controllers' in group_names"
-
-- name: Copy config files to /etc/kubernetes
-  copy:
-    src: "{{ item }}"
-    dest: /etc/kubernetes
+    dest: /etc/kubernetes/config
     owner: root
     mode: 0644
   with_fileglob:
     - files/configs/kube-scheduler.yaml
+  when: "'controllers' in group_names"
 
-- name: Copy config file to kubernetes controllers
+- name: Copy controllers config files to /var/lib/kubernetes
   copy:
     src: "{{ item }}"
     dest: /var/lib/kubernetes
@@ -91,4 +74,5 @@
     - files/certs/service-account-key.pem
     - files/configs/encryption-config.yaml
     - files/configs/kube-controller-manager.kubeconfig
+    - files/configs/kube-scheduler.kubeconfig
   when: "'controllers' in group_names"
