--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,14 @@
 *.swp
 *.pem
 *.csr
+roles/initial/files/cni-plugins-amd64.tgz
+roles/initial/files/containerd.tgz
+roles/initial/files/crictl.tgz
+roles/initial/files/tools/*
 roles/initial/files/certs/*.json
 roles/initial/files/cfssljson
-roles/initial/files/cfssl
-roles/initial/files/kubectl
 roles/initial/files/configs/*.kubeconfig
 roles/initial/files/configs/encryption-config.yaml
 roles/etcd/files/etcd
 roles/etcd/files/etcdctl
 roles/etcd/files/etcd.tgz
-roles/initial/files/kube-apiserver
-roles/initial/files/kube-controller-manager
-roles/initial/files/kube-scheduler
