--- a/roles/initial/tasks/main.yml
+++ b/roles/initial/tasks/main.yml
@@ -1,15 +1,3 @@
----
-- name: Install supp packages
-  apt:
-    name:
-      - socat
-      - conntrack
-      - ipset
-    state: present
-    update_cache: yes
-    cache_valid_time: 3600
-  when: "'workers' in group_names"
-
 - name: Copy etc/hosts
   template:
     src: hosts.j2
@@ -20,131 +8,10 @@
     name: "{{ hostname_name }}"
   when: hostname_name is defined
 
-- name: Make dirs
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: root
-    group: root
-    mode: 0644
-  with_items:
-    - /var/lib/kubernetes
-    - /etc/kubernetes
-    - /etc/kubernetes/config
+- name: Controllers tasks
+  include_tasks: controllers.yml
   when: "'controllers' in group_names"
 
-
-- name: Copy tools for controllers
-  copy:
-    src: "{{ item }}"
-    dest: /usr/local/bin/
-    owner: root
-    mode: 0755
-  with_fileglob:
-    - files/tools/kube-apiserver
-    - files/tools/kube-controller-manager
-    - files/tools/kube-scheduler
-    - files/tools/kubectl
-  when: "'controllers' in group_names"
-
-- name: Distribute certificates to workers
-  copy:
-    src: "{{ item }}"
-    dest: /root/
-    owner: root
-    mode: 0644
-  with_fileglob:
-    - files/certs/ca.pem
-    - "files/certs/{{ hostname_name }}-key.pem"
-    - "files/certs/{{ hostname_name }}.pem"
-    - "files/configs/{{ hostname_name }}.kubeconfig"
-    - files/configs/kube-proxy.kubeconfig
-  when: "'workers' in group_names"
-
-- name: Copy controllers config files to /etc/kubernetes
-  copy:
-    src: "{{ item }}"
-    dest: /etc/kubernetes/config
-    owner: root
-    mode: 0644
-  with_fileglob:
-    - files/configs/kube-scheduler.yaml
-  when: "'controllers' in group_names"
-
-- name: Copy controllers config files to /var/lib/kubernetes
-  copy:
-    src: "{{ item }}"
-    dest: /var/lib/kubernetes
-    owner: root
-    mode: 0644
-  with_fileglob:
-    - files/certs/ca.pem
-    - files/certs/ca-key.pem
-    - files/certs/kubernetes.pem
-    - files/certs/kubernetes-key.pem
-    - files/certs/service-account.pem
-    - files/certs/service-account-key.pem
-    - files/configs/encryption-config.yaml
-    - files/configs/kube-controller-manager.kubeconfig
-    - files/configs/kube-scheduler.kubeconfig
-  when: "'controllers' in group_names"
-
-- name: Make dirs for workers
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: root
-    group: root
-    mode: 0644
-  with_items:
-    - /opt/cni
-    - /etc/cni/net.d
-    - /opt/cni/bin
-    - /var/lib/kubelet
-    - /var/lib/kube-proxy
-    - /var/lib/kubernetes
-    - /var/run/kubernetes
-  when: "'workers' in group_names"
-
-- name: Copy tools for controllers
-  copy:
-    src: "{{ item }}"
-    dest: /usr/local/bin/
-    owner: root
-    mode: 0755
-  with_fileglob:
-    - files/tools/kubectl
-    - files/tools/kube-proxy
-    - files/tools/kubelet
-    - files/tools/runc
-    - files/tools/runsc
-    - files/tools/crictl
-    - files/tools/bin/containerd
-    - files/tools/bin/containerd-shim
-    - files/tools/bin/containerd-shim-runc-v1
-    - files/tools/bin/containerd-stress
-    - files/tools/bin/ctr
-  when: "'workers' in group_names"
-
-- name: Copy tools for controllers
-  copy:
-    src: "{{ item }}"
-    dest: /opt/cni/bin
-    owner: root
-    mode: 0755
-  with_fileglob:
-    - files/tools/crictl
-    - files/tools/bridge
-    - files/tools/dhcp
-    - files/tools/flannel
-    - files/tools/host-device
-    - files/tools/host-local
-    - files/tools/ipvlan
-    - files/tools/loopback
-    - files/tools/macvlan
-    - files/tools/portmap
-    - files/tools/ptp
-    - files/tools/sample
-    - files/tools/tuning
-    - files/tools/vlan
+- name: Workers tasks
+  include_tasks: workers.yml
   when: "'workers' in group_names"
