--- a/inventories/office/group_vars/controllers.yml
+++ b/inventories/office/group_vars/controllers.yml
@@ -1,4 +1,4 @@
 etcd_cluster_hosts:
-  - { name: c1, ip: 10.200.16.231 }
-  - { name: c2, ip: 10.200.16.232 }
-  - { name: c3, ip: 10.200.16.233 }
+  - { name: t231, ip: 10.200.15.231 }
+  - { name: t232, ip: 10.200.15.232 }
+  - { name: t233, ip: 10.200.15.233 }
